# FOBOS-Engine

./: CMakeLists.txt  main.cpp
code/: Global.cpp  Global.h
code/Algoritms/: GeometryAlgoritms.cpp  GeometryAlgoritms.h
code/Interfaces/: ForSFML.cpp  ForSFML.h  Input.cpp  Input.h  Loger.cpp  Loger.h  Render.cpp  Render.h  RenderR3D.cpp  RenderR3D.h  SMath.cpp  SMath.h  Settings.cpp  Settings.h  World.cpp  World.h
code/Objects/: Object.cpp  Object.h
code/Objects/Blocks/: Block.h  Wall.cpp  Wall.h
code/Objects/Camers/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  CameraQ3D.cpp  CameraQ3D.h  CameraR3D.cpp  CameraR3D.h
code/Objects/Entity/: Collider.cpp  Collider.h  Entity.cpp  Entity.h  Player.cpp  Player.h
code/Objects/Entity/Colliders/: BVH.cpp  BVH.h  Collider.cpp  Collider.h  ColliderCircle.cpp  ColliderCircle.h  ColliderLine.cpp  ColliderLine.h  ColliderPolygon.cpp  ColliderPolygon.h  ColliderRect.cpp  ColliderRect.h
code/Objects/Entity/Enemies/: Enemy.cpp  Enemy.h
code/Objects/GraphicsObjects/: AnimatedTexture.cpp  AnimatedTexture.h  Texture.h
code/Objects/R3DObjects/: R3DObject.cpp  R3DObject.h  Sprite.cpp  Sprite.h  Wall.cpp  Wall.h  WallRect.cpp  WallRect.h
code/Primitives/: Primitives2D.cpp  Primitives2D.h
code/Visual/: Shape.cpp  Shape.h  VisualStructs.cpp  VisualStructs.h
